--- a/solutions/Unit_1_Regression_Solutions.ipynb
+++ b/solutions/Unit_1_Regression_Solutions.ipynb
@@ -83,9 +83,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "ad3baa75",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -345,9 +343,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "fe7098a5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -539,7 +535,10 @@
    "execution_count": 59,
    "id": "c992d6a2",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -750,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
